--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="hours">hours</string>
     <string name="minutes">minutes</string>
     <string name="seconds">seconds</string>
+
+    <string name="sampleAdunitId">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="sampleAppId">ca-app-pub-3940256099942544~3347511713</string>
+    <string name="testDeviceId">F94FB05401064F99C85F9BECABDC8E59</string>
 </resources>
