--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_logo">App Logo</string>
     <string name="new_game">New Game</string>
     <string name="high_score">High Score</string>
+    <string name="high_scores">High Scores</string>
     <string name="rules">Rules</string>
 
     <string name="rule1">1. Click on any block adjacent to the empty block to swap.</string>
@@ -17,7 +18,7 @@
 
     <string name="sampleAdunitId">ca-app-pub-3940256099942544/6300978111</string>
     <string name="sampleAppId">ca-app-pub-3940256099942544~3347511713</string>
-    <string name="testDeviceId">F94FB05401064F99C85F9BECABDC8E59</string>
+    <string name="testDeviceId">1F45267EC1DC80D3BB57C61903D4631F</string>
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
 </resources>
