--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="new_game">New Game</string>
     <string name="high_score">High Score</string>
     <string name="high_scores">High Scores</string>
+    <string name="leaderboard">Leaderboard</string>
     <string name="rules">Rules</string>
 
     <string name="signIn"><u>Sign In With Google Account</u></string>
