--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,9 @@
     <string name="moves">Moves</string>
     <string name="time">Time</string>
 
+    <string name="initial_moves">0</string>
+    <string name="initial_time">00:00:00</string>
+
     <string name="hours">hours</string>
     <string name="minutes">minutes</string>
     <string name="seconds">seconds</string>
