--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,6 @@
     <string name="hours">hours</string>
     <string name="minutes">minutes</string>
     <string name="seconds">seconds</string>
+    <string name="resume_game">Resume Game</string>
+    <string name="restart_game">You have a previously saved game. Do you want to start a new game?</string>
 </resources>
