Add View Achievements button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="high_scores">High Scores</string>
     <string name="leaderboard">Leaderboard</string>
     <string name="rules">Rules</string>
+    <string name="view_achievements">View Achievements</string>
 
     <string name="signIn">Sign In</string>
     <string name="signOut">Sign Out</string>
