--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="no_leaderboard">No leaderboard yet.</string>
 
     <string name="quit_the_game">Are you sure you want to quit the game?</string>
-    <string name="play_new_game">Want to play a new game?</string>
+    <string name="play_new_game">Do you want to start a new game?</string>
 
     <string name="yes">Yes</string>
     <string name="no">No</string>
@@ -43,5 +43,5 @@
     <string name="minutes">minutes</string>
     <string name="seconds">seconds</string>
     <string name="resume_game">Resume Game</string>
-    <string name="restart_game">You have a previously saved game. Do you want to start a new game?</string>
+    <string name="restart_game">Do you want to override an already saved game?</string>
 </resources>
