Store game score in database and show in high scores dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="moves">Moves</string>
     <string name="time">Time</string>
 
+    <string name="score_label">Score : </string>
     <string name="moves_label">Moves : </string>
     <string name="time_label">Time : </string>
 
